# northwind-maps

./: README.md  config.js  docker-compose.yml  package-lock.json  package.json
.github/workflows/: docker.yaml
nginx/: default.conf.template  dev.conf.template
public/: config.js
scripts/: Dockerfile  README.md  create_layers.sh  docker-compose.yml  pyproject.toml
scripts/src/: main.py
scripts/src/templates/: metadata.json.tpl  style.json.tpl
src/: app.css  router.jsx
src/pages/viewer/: index.jsx
src/pages/viewer/components/: Layers.jsx  Lazy.jsx  MapContextProvider.jsx  Metadata.jsx
titiler/: Dockerfile  pyproject.toml
titiler/src/: main.py
titiler/src/app/: app.py  dependencies.py
