[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"},
]
dependencies = [
    "pathlib>=1.0.1",
    "rasterio>=1.3.9",
    "numpy>=1.26.3",
    "matplotlib>=3.8.2",
    #    "gdal==x.x.x",
    "click>=8.1.7",
    "jinja2>=3.1.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

